text overflow of quotes issue resolved

--- a/KwikKoderUI/src/app/pages/test/test.component.css
+++ b/KwikKoderUI/src/app/pages/test/test.component.css
@@ -8,19 +8,20 @@
     position: relative;
     left: 0%;  
 }
-
 .test_site textarea{
     width: 600px;
     height: 400px;
 }
-
 .input-form{
-    width: 70%;
+    text-align: center;
+    margin-top: 20px;
+    color: #ccc;
 }
-
+.input-form .info-box{
+    padding: 10px;
+}
 .info-box {
     text-align: center;
-    /* display: block; */
     background-color: var(--dark0_soft);
     border-color: var(--dark0_hard);
     border-width: 5px;
